log
Fri 12 May 2023 12:32:06 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
7440e0c
Fri 12 May 2023 12:32:21 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0eb1aa6
Fri 12 May 2023 12:32:56 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4b3c441
Fri 12 May 2023 12:33:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
44303f0
Fri 12 May 2023 12:36:15 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:10: error: unused variable ‘aTop’ [-Werror=unused-variable]
   22 |   Heap * aTop = pq->heapArray->data;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
f41dbcd
Fri 12 May 2023 12:36:32 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c546d4c
Fri 12 May 2023 12:37:27 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3363ed0
